--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,3 +2,4 @@
 @import "https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css";
 @import "./plugins/fontawesome-free/css/all.min.css";
 @import "./style.css";
+@import "./fonts.css";
